initial x-overflow issue fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,10 +7,11 @@
   font-family: 'Raleway', sans-serif;
 }
 
-body {
+html, body {
   margin: 0;
   font-weight: 400;
-  /* font-family: 'Raleway', sans-serif; */
+  max-width: 100vw;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
